First pass implementation of bibtex shortcode.

--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "citation-style-language/locales":"@dev",
         "citation-style-language/styles-distribution":"@dev",
         "seboettg/citeproc-php": "^2",
+        "renanbr/bibtex-parser": "^2",
         "geissler/converter": "dev-master",
         "apache/log4php": "2.3.0",
 		"cocur/slugify": "^3.1"
