--- a/composer.json
+++ b/composer.json
@@ -31,12 +31,13 @@
         }
     ],
     "require": {
-        "citation-style-language/locales":"@dev",
-        "citation-style-language/styles-distribution":"@dev",
+        "citation-style-language/locales": "@dev",
+        "citation-style-language/styles-distribution": "@dev",
         "seboettg/citeproc-php": "^2",
         "renanbr/bibtex-parser": "^2",
         "geissler/converter": "dev-master",
         "apache/log4php": "2.3.0",
-		"cocur/slugify": "^3.1"
+		"cocur/slugify": "^3.1",
+		"twig/twig": "^2.4"
     }
 }
