Most of the way through class renaming, formatting, and autoload refactoring. Some bugs to work out.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,12 @@
 {
-	"name": "OrkneyDullard/bibcite-sc",
+    "name": "OrkneyDullard/bibcite-sc",
+    "autoload": {
+        "psr-4": {
+            "Bibcite\\Main\\": "main",
+            "Bibcite\\Common\\": "common",
+            "Bibcite\\Admin\\": "admin"
+        }
+    },
     "repositories": [
         {
             "type": "package",
