--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "OrkneyDullard/bibcite-sc",
+    "name": "OrkneyDullard/Bibcite",
     "autoload": {
         "psr-4": {
             "Bibcite\\Main\\": "main",
@@ -38,6 +38,7 @@
         }
     ],
     "require": {
+        "php":">=7.0.0",
         "citation-style-language/locales": "@dev",
         "citation-style-language/styles-distribution": "@dev",
         "seboettg/citeproc-php": "^2",
