--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "OrkneyDullard/Bibcite",
+    "description": "A simple Bibtex parser and CSL citation generator.",
     "autoload": {
         "psr-4": {
             "Bibcite\\Main\\": "main",
@@ -38,7 +39,7 @@
         }
     ],
     "require": {
-        "php":">=7.0.0",
+        "php":">=7.1.0",
         "citation-style-language/locales": "@dev",
         "citation-style-language/styles-distribution": "@dev",
         "seboettg/citeproc-php": "^2",
