* Modified Logger to conform to the PSR logging interface * Added scoped logging for better debugging * Finally worked out what's going on with unknown entries - need to modify the code to handle concurrent requests better.

--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "geissler/converter": "dev-master",
         "apache/log4php": "2.3.0",
 		"cocur/slugify": "^3.1",
-		"twig/twig": "^2.4"
+		"twig/twig": "^2.4",
+        "psr/log": "^1.0"
     }
 }
