Working on UTs to verify that problematic entries are handled correctly.
* Updated PHP version
* Updated dependent packages
* Added phpunit dependency
* Added simple UTs to verify parsing and rendering of entries

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ShadyChars/Bibcite",
+    "name": "shadychars/bibcite",
     "description": "A simple Bibtex parser and CSL citation generator.",
     "autoload": {
         "psr-4": {
@@ -39,7 +39,7 @@
         }
     ],
     "require": {
-        "php":">=7.1.0",
+        "php":">=7.2.34",
         "citation-style-language/locales": "@dev",
         "citation-style-language/styles-distribution": "@dev",
         "seboettg/citeproc-php": "^2",
@@ -49,5 +49,8 @@
 		"cocur/slugify": "^3.1",
 		"twig/twig": "^2.4",
         "psr/log": "^1.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
     }
 }
